<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_sport_collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_collect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sport_plan_1"
        android:textColor="#ffcc00"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_one"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/sport_plan_content_shape"
        android:gravity="center"
        android:text="@string/sport_plan_1_1"
        android:textColor="#cdcdcd"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_collect_title" />

    <TextView
        android:id="@+id/tv_choose_two"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/sport_plan_content_shape"
        android:gravity="center"
        android:text="@string/sport_plan_1_2"
        android:textColor="#cdcdcd"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_one" />

    <TextView
        android:id="@+id/tv_choose_three"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/sport_plan_content_shape"
        android:gravity="center"
        android:text="@string/sport_plan_1_3"
        android:textColor="#cdcdcd"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_two" />



    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="完成"
        android:padding="5dp"
        android:background="@drawable/sport_yellow_shape"
        android:textColor="#ffcc00"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_three" />
</android.support.constraint.ConstraintLayout>