<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_white"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/textView171"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/sport_plan_4"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView98"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView171"
        app:srcCompat="@drawable/sport_plan_content_v2_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/tv_sport_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/sport_plan_4_1"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView98"
        app:layout_constraintRight_toLeftOf="@+id/tv_sport_frequency"
        app:layout_constraintTop_toTopOf="@+id/imageView98" />

    <TextView
        android:id="@+id/tv_sport_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sport_plan_4_2"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_sport_heart_rate"
        app:layout_constraintRight_toLeftOf="@+id/tv_sport_cycle"
        app:layout_constraintTop_toTopOf="@+id/imageView98"
        tools:layout_editor_absoluteX="109dp" />

    <TextView
        android:id="@+id/tv_sport_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/sport_plan_4_3"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/tv_sport_frequency"
        app:layout_constraintRight_toRightOf="@+id/imageView98"
        app:layout_constraintTop_toTopOf="@+id/imageView98" />

    <TextView
        android:id="@+id/tv_heart_rate_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/heart_rate_unit"
        android:textColor="#ffcc00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView98"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sport_heart_rate"
        app:layout_constraintRight_toRightOf="@+id/tv_sport_heart_rate" />

    <TextView
        android:id="@+id/tv_sport_frequency_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/heart_frequency_unit"
        android:textColor="#ffcc00"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sport_frequency"
        app:layout_constraintRight_toRightOf="@+id/tv_sport_frequency"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_heart_rate_content" />

    <TextView
        android:id="@+id/tv_sport_cycle_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="7天"
        android:textColor="#ffcc00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_sport_frequency_content"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sport_cycle"
        app:layout_constraintRight_toRightOf="@+id/tv_sport_cycle" />

    <ImageView
        android:id="@+id/iv_sport_considerations"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView98"
        app:layout_constraintRight_toRightOf="@+id/imageView98"
        app:srcCompat="@drawable/matters_need_attention" />

    <ImageView
        android:id="@+id/imageView101"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView98"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toRightOf="@+id/tv_sport_heart_rate"
        app:layout_constraintRight_toLeftOf="@+id/tv_sport_frequency"
        app:layout_constraintTop_toTopOf="@+id/imageView98"
        app:srcCompat="@drawable/scheme_line" />

    <ImageView
        android:id="@+id/imageView104"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView98"
        app:layout_constraintLeft_toRightOf="@+id/tv_sport_frequency"
        app:layout_constraintRight_toLeftOf="@+id/tv_sport_cycle"
        app:layout_constraintTop_toTopOf="@+id/imageView98"
        app:srcCompat="@drawable/scheme_line" />

</android.support.constraint.ConstraintLayout>