<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageView73"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView213"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView154"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/cang_pay1"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView73"
        app:layout_constraintLeft_toLeftOf="@+id/imageView73"
        app:layout_constraintTop_toTopOf="@+id/imageView73"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_fit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="30 min"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView154"
        app:layout_constraintEnd_toEndOf="@+id/imageView73" />

    <ImageView
        android:id="@+id/imageView74"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView73"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView157"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/cang_pay2"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView74"
        app:layout_constraintLeft_toLeftOf="@+id/imageView74"
        app:layout_constraintTop_toTopOf="@+id/imageView74"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_fit_order_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="10001121101010201"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView157"
        app:layout_constraintEnd_toEndOf="@+id/imageView74" />

    <ImageView
        android:id="@+id/imageView75"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView74"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView159"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/cang_pay3"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView75"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_fit_cang_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="000021"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView159"
        app:layout_constraintEnd_toEndOf="@+id/imageView75" />


    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView147"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView136"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选择支付方式"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="@+id/imageView37"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView37"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView37"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/buy_wechat"
        app:layout_constraintTop_toTopOf="@+id/imageView38"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView38"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView38"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_wechat_pay"
        style="@style/DepositCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView38"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView38" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/bg_white"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView38"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/buy_alipay"
        app:layout_constraintTop_toTopOf="@+id/imageView43"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView43"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView43"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/cb_alipay"
        style="@style/DepositCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView43"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView43" />

    <TextView
        android:id="@+id/textView165"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="微信"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView38"
        app:layout_constraintTop_toBottomOf="@+id/imageView38"
        app:layout_constraintLeft_toRightOf="@+id/imageView40"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.492"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView169"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="支付宝"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView43"
        app:layout_constraintTop_toBottomOf="@+id/imageView43"
        app:layout_constraintLeft_toRightOf="@+id/imageView44"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView213"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="健身舱使用"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView125"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView75"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView216"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="应付金额"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView125"
        app:layout_constraintStart_toStartOf="@+id/imageView125"
        app:layout_constraintTop_toTopOf="@+id/imageView125" />

    <TextView
        android:id="@+id/tv_need_pay_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/RMB"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView216"
        app:layout_constraintEnd_toEndOf="@+id/imageView125" />

    <ImageView
        android:id="@+id/iv_cang_cost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView125"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView147"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cang_cost"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView218"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="折扣卡"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView147"
        app:layout_constraintStart_toStartOf="@+id/iv_cang_cost"
        app:layout_constraintTop_toTopOf="@+id/iv_cang_cost" />

    <TextView
        android:id="@+id/tv_cang_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="XXXX"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView218"
        app:layout_constraintEnd_toStartOf="@+id/imageView148" />

    <ImageView
        android:id="@+id/imageView148"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView147"
        app:layout_constraintEnd_toEndOf="@+id/iv_cang_cost"
        app:layout_constraintTop_toTopOf="@+id/iv_cang_cost"
        app:srcCompat="@drawable/buy_right" />

    <TextView
        android:id="@+id/textView220"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="还需支付"
        android:textColor="@color/text_hint_title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView147"
        app:layout_constraintStart_toStartOf="@+id/imageView147"
        app:layout_constraintTop_toTopOf="@+id/imageView147" />

    <TextView
        android:id="@+id/tv_real_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/RMB"
        android:textColor="@color/text_red"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView220"
        app:layout_constraintEnd_toEndOf="@+id/imageView147" />


</android.support.constraint.ConstraintLayout>